addapt setup for jenkins integration